Updated with preliminary (submitted) manuscript citation

--- a/pyUserCalc-v3.1.ipynb
+++ b/pyUserCalc-v3.1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The pyUserCalc Calculator: Determining U-series disequilibria in partial melts\n",
+    "# pyUserCalc: A revised Jupyter notebook calculator for uranium-series disequilibria in basalts\n",
     "\n",
     "#### Lynne J. Elkins$^{1}$, Marc Spiegelman$^{2}$\n",
     "\n",
@@ -21,7 +21,7 @@
     "\n",
     "This Jupyter notebook calculates U-series disequilibria in partial melts using the equations after Elkins and Spiegelman *(submitted)*. Users should cite that reference when publishing outcomes of this calculator tool using the following citation:\n",
     "\n",
-    "(Paste citation information here)\n",
+    "Elkins, L.J. and Spiegelman, M. (submitted) pyUserCalc: A revised Jupyter notebook calculator for uranium-series disequilibria in basalts. Submitted to *Earth and Space Science.*\n",
     "\n",
     "The notebook determines ($^{230}$Th/$^{238}$U), ($^{226}$Ra/$^{230}$Th), and ($^{231}$Pa/$^{235}$U) in partial melts for pure equilibrium or disequilibrium porous flow transport in a 1D decompressing mantle melting column. The disequilibrium transport model considers reactivity rates relative to the solid decompression rate using a Damköhler number. The equations for these models are briefly summarized below, but the user is referred to the full Elkins and Spiegelman *(submitted)* manuscript for more detailed definitions and derivations."
    ]
@@ -154,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = UserCalc.plot_inputs(df)"
+    "UserCalc.plot_inputs(df)"
    ]
   },
   {
@@ -445,7 +445,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Equilibrium model results figure:\n",
@@ -457,7 +459,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Pure disequilibrium model results figure:\n",
@@ -469,7 +473,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Scaled disequilibrium model results figure:\n",
@@ -722,7 +728,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Equilibrium grid plots for U-Pa chain:\n",
@@ -748,7 +756,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Pure disequilibrium grid plots for U-Pa chain:\n",
@@ -774,7 +784,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Scaled disequilibrium grid plots for U-Pa chain:\n",
@@ -783,6 +795,13 @@
     "    plt.title('Disequilibrium transport, Da = {}'.format(us_diseqda.Da),y=1.1)\n",
     "    plt.savefig(\"{}/{}_grid_Pa_Th_diseq_Da={}.pdf\".format(runname,runname,us_diseqda.Da),transparent=True,dpi=300,bbox_inches='tight')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -801,7 +820,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
