Added functionality and notebook for generating example two-level model with smoothing * Added 3 routines to UserCalc.py * added demonstration notebook twolayermodel.ipynb

--- a/pyUserCalc-v3.1.ipynb
+++ b/pyUserCalc-v3.1.ipynb
@@ -19,11 +19,11 @@
    "source": [
     "### Summary\n",
     "\n",
-    "This Jupyter notebook calculates U-series disequilibria in partial melts using the equations after Elkins and Spiegelman *(submitted)*. Users should cite that reference when publishing outcomes of this calculator tool using the following citation:\n",
+    "This Jupyter notebook calculates U-series disequilibria in partial melts using the equations after Elkins and Spiegelman (2021). Users should cite that reference when publishing outcomes of this calculator tool using the following citation:\n",
     "\n",
-    "Elkins, L.J. and Spiegelman, M. (submitted) pyUserCalc: A revised Jupyter notebook calculator for uranium-series disequilibria in basalts. Submitted to *Earth and Space Science.*\n",
+    "Elkins, L.J. and Spiegelman, M. (2021) pyUserCalc: A revised Jupyter notebook calculator for uranium-series disequilibria in basalts. *Earth and Space Science,* doi.org/10.1002/essoar.10505604.1.\n",
     "\n",
-    "The notebook determines ($^{230}$Th/$^{238}$U), ($^{226}$Ra/$^{230}$Th), and ($^{231}$Pa/$^{235}$U) in partial melts for pure equilibrium or disequilibrium porous flow transport in a 1D decompressing mantle melting column. The disequilibrium transport model considers reactivity rates relative to the solid decompression rate using a Damköhler number. The equations for these models are briefly summarized below, but the user is referred to the full Elkins and Spiegelman *(submitted)* manuscript for more detailed definitions and derivations."
+    "The notebook determines ($^{230}$Th/$^{238}$U), ($^{226}$Ra/$^{230}$Th), and ($^{231}$Pa/$^{235}$U) in partial melts for pure equilibrium or disequilibrium porous flow transport in a 1D decompressing mantle melting column. The disequilibrium transport model considers reactivity rates relative to the solid decompression rate using a Damköhler number. The equations for these models are briefly summarized below, but the user is referred to the full Elkins and Spiegelman (2021) manuscript for more detailed definitions and derivations."
    ]
   },
   {
@@ -32,7 +32,7 @@
    "source": [
     "#### Equilibrium porous flow\n",
     "\n",
-    "As described in the Elkins and Spiegelman *(submitted)* main text, this equilibrium transport model recreates the solutions of Spiegelman and Elliott (1993) for U-series disequilibrium calculations during partial melting. As a brief summary, the concentration expression from Spiegelman (2000) for the equilibrium scenario (formula 6 in that reference) is:\n",
+    "As described in the Elkins and Spiegelman (2021) main text, this equilibrium transport model recreates the solutions of Spiegelman and Elliott (1993) for U-series disequilibrium calculations during partial melting. As a brief summary, the concentration expression from Spiegelman (2000) for the equilibrium scenario (formula 6 in that reference) is:\n",
     "\n",
     "$$\n",
     "    \\frac{dc_i^f}{dz} = \\frac{-c_i^f(z)}{F(z) + (1 - F(z)) D_i(z)} \\frac{d}{dz} [F(z) + (1 - F(z)) D_i(z)] + \\frac{\\lambda_{i-1}\\overline{\\rho D_{i-1}} c_{i-1}^f(z) - \\lambda_{i}\\overline{\\rho D_{i}} c_{i}^f(z)}{\\rho_s W_0 [F(z) + (1 - F(z)) D_i(z)]}\n",
@@ -66,12 +66,12 @@
    "metadata": {},
    "source": [
     "#### Disequilibrium porous flow\n",
-    "The disequilibrium transport model solves the set of equations for disequilibrium transport after Spiegelman and Elliott (1993), with an additional reactivity term for a scaled reactivity rate $\\Re$. The log concentrations are solved similar to the expressions for equilibrium transport above, but with modified mass conservation that tracks pure disequilibrium flow. These modified expressions are:\n",
+    "The disequilibrium transport model solves the set of equations for disequilibrium transport after Spiegelman and Elliott (1993), with an additional reactivity term for a scaled reactivity rate $\\Re$. The log concentrations are solved similar to the expressions for equilibrium transport above, but with modified mass conservation that tracks pure disequilibrium flow. These modified expressions, expressed in terms of the scaled column height $\\zeta$, are:\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "\\frac{dU_i^f}{dz}  &= \\frac{1}{F(z)}\\left[\\frac{dF}{dz}(\\frac{D_i^0}{D_i(z)}\\exp(U_i^s(z) - U_i^f(z)) - 1)\\right] - \\frac{\\Re h}{\\rho_s W_0 F(z)}\\left[1 - \\frac{D_i^0}{D_i(z)}\\exp(U_i^s(z) - U_i^f(z))\\right] + \\frac{\\rho_f \\phi}{\\rho_s F}\\lambda_i \\left[\\frac{D_i^0 \\alpha_{i-1}}{D_{i-1}^0 \\alpha_i} exp[U_{i-1}^f - U_i^f]-1\\right] \\\\\n",
-    "\\frac{dU_i^s}{dz}  &=  \\frac{1}{(1 - F(z))}\\left[\\frac{dF}{dz} (1 - \\frac{1}{D_i(z)})\\right]+ \\frac{\\Re h}{\\rho_s W_0 D_i(z)(1 - F(z))}\\left[\\frac{D_i(z)}{D_i^0} \\exp(U_i^f(z) - U_i^s(z)) - 1 \\right] + \\frac{1-\\phi}{1-F(z)}\\lambda_i \\left[\\frac{\\alpha_{i-1}}{\\alpha_i} exp[U_{i-1}^s - U_i^s]-1\\right]\\\\\n",
+    "\\frac{dU_i^f}{d\\zeta}  &= \\frac{1}{F(\\zeta)}\\left[\\frac{dF}{d\\zeta}(\\frac{D_i^0}{D_i(\\zeta)}\\exp(U_i^s(\\zeta) - U_i^f(\\zeta)) - 1)\\right] - \\frac{\\Re h}{\\rho_s W_0 F(\\zeta)}\\left[1 - \\frac{D_i^0}{D_i(\\zeta)}\\exp(U_i^s(\\zeta) - U_i^f(\\zeta))\\right] + \\frac{\\rho_f \\phi}{\\rho_s F(\\zeta)}\\lambda'_i \\left[\\frac{D_i^0 \\alpha_{i-1}}{D_{i-1}^0 \\alpha_i} exp[U_{i-1}^f(\\zeta) - U_i^f(\\zeta)]-1\\right] \\\\\n",
+    "\\frac{dU_i^s}{d\\zeta}  &=  \\frac{1}{(1 - F(\\zeta))}\\left[\\frac{dF}{d\\zeta} (1 - \\frac{1}{D_i(\\zeta)})\\right]+ \\frac{\\Re h}{\\rho_s W_0 D_i(\\zeta)(1 - F(\\zeta))}\\left[\\frac{D_i(\\zeta)}{D_i^0} \\exp(U_i^f(\\zeta) - U_i^s(\\zeta)) - 1 \\right] + \\frac{1-\\phi}{1-F(\\zeta)}\\lambda'_i \\left[\\frac{\\alpha_{i-1}}{\\alpha_i} exp[U_{i-1}^s(\\zeta) - U_i^s(\\zeta)]-1\\right]\\\\\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
@@ -88,7 +88,7 @@
    "source": [
     "### The calculator tool\n",
     "\n",
-    "The python code cells embedded below implement the models described above and in the main text of Elkins and Spiegelman *(submitted)*. A copy of this .ipynb file should be saved to a user directory, along with the \"UserCalc.py\" driver file and one folder named \"data\". The input file should be a comma-delimited text file written in the same format as the \"sample\" file provided, and should be saved to the \"data\" directory. This Jupyter notebook can then be run either native on the user's computer using a python software package, such as Jupyter Notebook in the Anaconda package, or from a cloud account in a shared online JupyterLab or JupyterHub environment like the ENKI platform.\n",
+    "The python code cells embedded below implement the models described above and in the main text of Elkins and Spiegelman *(2021)*. A copy of this .ipynb file should be saved to a user directory, along with the \"UserCalc.py\" driver file and one folder named \"data\". The input file should be a comma-delimited text file written in the same format as the \"sample\" file provided, and should be saved to the \"data\" directory. This Jupyter notebook can then be run either native on the user's computer using a python software package, such as Jupyter Notebook in the Anaconda package, or from a cloud account in a shared online JupyterLab or JupyterHub environment like the ENKI platform.\n",
     "\n",
     "Once this notebook has been opened, select each embedded code cell by mouse-click and then simultaneously type the 'Shift' and 'Enter' keys to run the cell, after which selection will automatically advance to the following cell. Cells may be edited prior to running to specify the model calculations desired. Note that when modifying and running the model repeatedly, it may be necessary to restart the kernel for each fresh start.\n",
     "\n",
@@ -356,7 +356,7 @@
    "source": [
     "The next cell initializes and runs 1D calculations for the specified transport models and input data.\n",
     "\n",
-    "Note that for input data files that generate very rapid concentration changes, the disequilibrium model may fail because the ODE solver cannot solve the problem. To try to prevent this, we recommend first testing $Da=10^{-10}$ instead of $Da=0$ by default. This will often avoid the error and should produce a comparable result, as explored in Elkins and Spiegelman *(submitted)*. If errors persist, revising the input data to create more gradual changes in $F(P)$ or $D_i(P)$ may be necessary.\n",
+    "Note that for input data files that generate very rapid concentration changes, the disequilibrium model may fail because the ODE solver cannot solve the problem. To try to prevent this, we recommend first testing $Da=10^{-10}$ instead of $Da=0$ by default. This will often avoid the error and should produce a comparable result, as explored in Elkins and Spiegelman (2021). If errors persist, revising the input data to create more gradual changes in $F(P)$ or $D_i(P)$ may be necessary.\n",
     "\n",
     "The default model run scenario considers radioactive decay during transport. To instead determine instantaneous batch or fractional melting without radioactive decay, change the \"stable\" value to \"True\" in the cells below."
    ]
@@ -624,7 +624,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The cells below create and export contour figures as described in the Elkins and Spiegelman *(submitted)* main text, first for equilibrium and then for disequilibrium and scaled reactivity transport."
+    "The cells below create and export contour figures as described in the Elkins and Spiegelman (2021) main text, first for equilibrium and then for disequilibrium and scaled reactivity transport."
    ]
   },
   {
@@ -709,7 +709,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, the remaining cells display and export grid or mesh figures as described in the Elkins and Spiegelman *(submitted)* main text, again showing equilibrium results followed by disequilibrium and scaled reactivity results."
+    "Finally, the remaining cells display and export grid or mesh figures as described in the Elkins and Spiegelman (2021) main text, again showing equilibrium results followed by disequilibrium and scaled reactivity results."
    ]
   },
   {
