Additional tweaks to code and manuscript * UserCalc.py: — changed porosity and F to % in plotting routines — Changed porosity grid contours to dashed * pyUserCalc_manuscript.ipynb: — Minor edits suggested by reviewer 3 last round — slight change to Disequilibrium plots

--- a/pyUserCalc_manuscript.ipynb
+++ b/pyUserCalc_manuscript.ipynb
@@ -123,7 +123,7 @@
     "\n",
     "where $W_0$ is the solid mantle upwelling rate, and $\\Gamma_0$ is equivalent to $\\rho_s W_0 F_{max}$ divided by the column height $h$ for a maximum degree of melting $F_{max}$.\n",
     "\n",
-    "Assuming an initial condition of secular equilibrium, where the initial activities $\\lambda_i c_{i,0}^f D_i$ are equivalent for parent and daughter nuclides, they derived a system of differential equations for the concentration $c_i^f$ in any decay chain, which can be solved numerically using equation (10) from that paper:\n",
+    "Assuming an initial condition of secular equilibrium, where the initial activities $\\lambda_i c_{i,0}^f D_i$ are equivalent for parent and daughter nuclides, they derived a system of differential equations for the concentration $c_i^f$ in any decay chain, which can be solved numerically using equation (10) from Spiegelman and Elliott (1993):\n",
     "\n",
     "$$\n",
     "    \\frac{dc_i'}{d\\zeta} = c_i' \\frac{(D_i-1)F_{max}}{D_i + (1-D_i)F_{max} \\zeta} + \\lambda_i h\\left[ \\frac{D_i[D_{i-1}+(1-D_{i-1})F_{max}\\zeta]}{D_{i-1}[D_i + (1-D_i)F_{max}\\zeta]} \\frac{c_{i-1}'}{w_{eff}^{i-1}} - \\frac{c_i'}{w_{eff}^i}\\right]\n",
@@ -139,7 +139,7 @@
     "\n",
     "is the effective velocity for element $i$.\n",
     "\n",
-    "In their appendix, Spiegelman and Elliott (1993) developed the more general (and, arguably, realistic) form where $\\Gamma$ and $D_i$ are functions of height $z$. The UserCalc model of Spiegelman (2000) then formulated a one-dimensional numerical integration for the concentrations of selected U-series isotopes in continuously produced partial melts with height $z$, after the equilibrium formulas above. The concentration expression derived by Spiegelman (2000) for the equilibrium scenario (formula 6 in that reference) is:\n",
+    "In their appendix, Spiegelman and Elliott (1993) developed the more general (and, arguably, realistic) form where $\\Gamma$ and $D_i$ are functions of height $z$. The UserCalc model of Spiegelman (2000) then formulated a one-dimensional numerical integration for the concentrations of selected U-series isotopes in continuously produced partial melts with height $z$, after the equilibrium formulas above. The concentration expression derived by Spiegelman (2000) for the equilibrium scenario (formula 6 in Spiegelman (2000)) is:\n",
     "\n",
     "$$\n",
     "    \\frac{dc_i^f}{dz} = \\frac{-c_i^f(z)}{F(z) + (1 - F(z)) D_i(z)} \\frac{d}{dz} [F(z) + (1 - F(z)) D_i(z)] + \\frac{\\lambda_{i-1}\\overline{\\rho D_{i-1}} c_{i-1}^f(z) - \\lambda_{i}\\overline{\\rho D_{i}} c_{i}^f(z)}{\\rho_s W_0 [F(z) + (1 - F(z)) D_i(z)]}\n",
@@ -176,12 +176,12 @@
     "<div style=\"text-align: right\">(11)</div>\n",
     "\n",
     "$$\n",
-    "    R_i^{i-1} = \\alpha_i \\frac{D_i^0}{D_{i-1}^0} \\frac{\\overline{\\rho D_{i-1}}}{\\overline{\\rho D_i}} ,\n",
+    "    R_i^{i-1} = \\alpha_i^0 \\frac{D_i^0}{D_{i-1}^0} \\frac{\\overline{\\rho D_{i-1}}}{\\overline{\\rho D_i}} ,\n",
     "$$\n",
     "<div style=\"text-align: right\">(12)</div>\n",
     "\n",
     "$$\n",
-    "    \\alpha_i = \\frac{\\lambda_{i-1} c_{(i-1),0}^s}{\\lambda_i c_{i,0}^s} ,\n",
+    "    \\alpha_i^0 = \\frac{\\lambda_{i-1} c_{(i-1),0}^s}{\\lambda_i c_{i,0}^s} ,\n",
     "$$\n",
     "<div style=\"text-align: right\">(13)</div>\n",
     "\n",
@@ -192,7 +192,7 @@
     "$$\n",
     "<div style=\"text-align: right\">(14)</div>\n",
     "\n",
-    "where $D_i^0$ is the initial bulk solid/melt partition coefficient for element $i$, $R_i^{i-1}$ is the ingrowth factor, and $\\alpha$ is the initial degree of secular disequilibrium in the unmelted solid.\n",
+    "where $D_i^0$ is the initial bulk solid/melt partition coefficient for element $i$, $R_i^{i-1}$ is the ingrowth factor, and $\\alpha_i^0$ is the initial degree of secular disequilibrium for nuclide $i$ in the unmelted solid.\n",
     "\n",
     "$U_i(z) = \\ln(c_f(z)/c_f^0)$, the log of the total concentration of nuclide $i$ in the melt, can then be decomposed into\n",
     "\n",
@@ -231,7 +231,7 @@
     "$$\n",
     "<div style=\"text-align: right\">(19)</div>\n",
     "\n",
-    "where $K_r(z)$ is the relative permeability with height $z$, $A_d$ is a permeability calibration function, and $n$ is the permeability exponent. The permeability exponent for a tube-shaped fluid network is expected to be n = 2, while for a sheet-shaped network it is 3; recent measurements of the permeabilities of experimental magmatic melt networks suggest realistic magma migration occurs in a manner intermediate between these two scenarios, with n = 2.6 (Miller et al., 2014). The relative permeability $K_r$  is calculated with respect to the permeability at the top of the column, i.e. depth $z=z_{final}$:\n",
+    "where $K_r(z)$ is the relative permeability with height $z$, $A_d$ is a permeability calibration function, and $n$ is the permeability exponent. The permeability exponent for a tube-shaped fluid network is expected to be $n = 2$, while for a sheet-shaped network it is $n = 3$; recent measurements of the permeabilities of experimental magmatic melt networks suggest realistic magma migration occurs in a manner intermediate between these two scenarios, with $n = 2.6$ (Miller et al., 2014). The relative permeability $K_r$  is calculated with respect to the permeability at the top of the column, i.e. depth $z=z_{final}$:\n",
     "\n",
     "$$\n",
     "K_r(z) = \\frac{k(z)}{k(z_{final})}\n",
@@ -675,7 +675,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Select this cell with by mouseclick, and run the code by simultaneously typing the 'Shift' + 'Enter' keys.\n",
+    "# Select this cell  by mouseclick, and run the code by simultaneously typing the 'Shift' + 'Enter' keys.\n",
     "# If the browser is able to run the Jupyter notebook, a number [1] will appear to the left of the cell.\n",
     "\n",
     "import pandas as pd\n",
@@ -913,8 +913,11 @@
    "outputs": [],
    "source": [
     "fig, axes = UserCalc.plot_1Dcolumn(df_out)\n",
+    "axes[2].set_prop_cycle(None)\n",
     "for s in ['(230Th/238U)','(226Ra/230Th)','(231Pa/235U)']:\n",
-    "        axes[2].plot(df_out_eq[s],df_out['P'],'--',color='grey')\n",
+    "        axes[2].plot(df_out_eq[s],df_out['P'],'-')\n",
+    "        axes[2].plot(df_out_eq[s],df_out['P'],'.',color='grey')\n",
+    "\n",
     "axes[2].set_title('Da = {}'.format(us_diseq.Da))\n",
     "plt.show()"
    ]
@@ -923,7 +926,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Figure 3.** Disequilibrium model output results for the degree of melting, residual melt porosity, and activity ratios ($^{230}$Th/$^{238}$U), ($^{226}$Ra/$^{230}$Th), and ($^{231}$Pa/$^{235}$U) as a function of pressure, for the Dahmköhler number shown ($Da = 0$). For comparison, the dashed gray curves show solutions for the equilibrium transport model."
+    "**Figure 3.** Disequilibrium model output results for the degree of melting, residual melt porosity, and activity ratios ($^{230}$Th/$^{238}$U), ($^{226}$Ra/$^{230}$Th), and ($^{231}$Pa/$^{235}$U) as a function of pressure, for the Dahmköhler number shown ($Da = 0$). For comparison, the dotted gray curves show solutions for the equilibrium transport model."
    ]
   },
   {
@@ -961,8 +964,10 @@
    "outputs": [],
    "source": [
     "fig, axes = UserCalc.plot_1Dcolumn(df_out)\n",
+    "axes[2].set_prop_cycle(None)\n",
     "for s in ['(230Th/238U)','(226Ra/230Th)','(231Pa/235U)']:\n",
-    "        axes[2].plot(df_out_eq[s],df_out['P'],'--',color='grey')\n",
+    "    axes[2].plot(df_out_eq[s],df_out['P'],'-')\n",
+    "    axes[2].plot(df_out_eq[s],df_out['P'],'.',color='grey')\n",
     "axes[2].set_title('Da = {}'.format(us_diseq.Da))\n",
     "plt.show()"
    ]
@@ -994,8 +999,11 @@
     "df_out = us_diseq.solve_all_1D(phi0,n,W0,alpha0_all)\n",
     "\n",
     "fig, axes = UserCalc.plot_1Dcolumn(df_out)\n",
+    "axes[2].set_prop_cycle(None)\n",
     "for s in ['(230Th/238U)','(226Ra/230Th)','(231Pa/235U)']:\n",
-    "        axes[2].plot(df_out_eq[s],df_out['P'],'--',color='grey')\n",
+    "        axes[2].plot(df_out_eq[s],df_out['P'],'-')\n",
+    "        axes[2].plot(df_out_eq[s],df_out['P'],'.',color='grey')\n",
+    "\n",
     "axes[2].set_title('Da = {}'.format(us_diseq.Da))\n",
     "plt.show()"
    ]
@@ -1212,7 +1220,7 @@
     "\n",
     "In mantle decompression melting scenarios, melting is expected to cease in the shallow, colder part of the regime where a lithospheric layer is present. The effects of cessation of melting prior to reaching the surface can be envisioned as affecting magma compositions in a number of ways, some of which could be calculated using the models presented here by setting $dF=0$.\n",
     "\n",
-    "There are, however, several limitations when using our transport models to simulate lithospheric melt transport in this way, as the model equations are written to track steady-state decompression and melting. The first limitation is thus the underlying assumption that the solid is migrating and experiencing progressive melt depletion in the model, while the solid lithosphere should in fact behave as a rigid matrix that does not experiencing upwelling. For the disequilibrium transport model with $Da=0$, no chemical reequilibration occurs while $dF=0$, so the lack of solid migration after the cessation of melting does not pose a problem; instead, in the pure disequilibrium transport case, imposing $dF=0$ simply allows for radioactive decay and ingrowth during transport through the lithospheric layer.\n",
+    "There are, however, several limitations when using our transport models to simulate lithospheric melt transport in this way, as the model equations are written to track steady-state decompression and melting. The first limitation is thus the underlying assumption that the solid is migrating and experiencing progressive melt depletion in the model, while the solid lithosphere should in fact behave as a rigid matrix that does not experience upwelling. For the disequilibrium transport model with $Da=0$, no chemical reequilibration occurs while $dF=0$, so the lack of solid migration after the cessation of melting does not pose a problem; instead, in the pure disequilibrium transport case, imposing $dF=0$ simply allows for radioactive decay and ingrowth during transport through the lithospheric layer.\n",
     "\n",
     "The equilibrium transport model, on the other hand, permits full equilibration even if $dF=0$, but the liquid composition does not directly depend on the solid concentration, $c_i^s(z)$, so ongoing chemical reequilibration between the liquid and a modified lithospheric solid could be simulated by modifying the bulk solid/liquid partition coefficients $D_i$. However, the underlying model assumes that the liquid with mass proportion $F_{max}$ reequilibrates with the solid matrix in a steady-state transport regime, at the maximum reference porosity, which may not accurately simulate the transport regime through the fixed lithosphere with no melting. Because it does not directly consider mineral abundances or compositions, the model also does not account for complexities such as low temperature melt-rock reaction or mineral growth.\n",
     "\n",
@@ -1587,13 +1595,6 @@
     "\n",
     "Zou, H., and A. Zindler (2000), Theoretical studies of $^{238}$U-$^{230}$Th-$^{226}$Ra and $^{235}$U-$^{231}$Pa disequilibria in young lavas produced by mantle melting, *Geochimica et Cosmochimica Acta,* **64**(10), 1809-1817."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1612,7 +1613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
