Making sure current version is most recent for main tool pyUserCalc-v3.1.ipynb

--- a/pyUserCalc-v3.1.ipynb
+++ b/pyUserCalc-v3.1.ipynb
@@ -262,7 +262,7 @@
    "outputs": [],
    "source": [
     "# Specify the data input scenario that should be run below. Options are 'original', 'no_lith', and 'lith'.\n",
-    "data_input_option = 'original'"
+    "data_input_option = 'no_lith'"
    ]
   },
   {
