Accepted notebook supplemental version with final ESS journal DOI and citation information.

--- a/pyUserCalc-v3.1.ipynb
+++ b/pyUserCalc-v3.1.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "This Jupyter notebook calculates U-series disequilibria in partial melts using the equations after Elkins and Spiegelman (2021). Users should cite that reference when publishing outcomes of this calculator tool using the following citation:\n",
     "\n",
-    "Elkins, L.J. and Spiegelman, M. (2021) pyUserCalc: A revised Jupyter notebook calculator for uranium-series disequilibria in basalts. *Earth and Space Science,* doi.org/10.1002/essoar.10505604.1.\n",
+    "Elkins, L.J., & Spiegelman, M. (2021). pyUserCalc: A revised Jupyter notebook calculator for uranium-series disequilibria in basalts. Earth and Space Science, 8, e2020EA001619. https://doi.org/10.1029/2020EA001619.\n",
     "\n",
     "The notebook determines ($^{230}$Th/$^{238}$U), ($^{226}$Ra/$^{230}$Th), and ($^{231}$Pa/$^{235}$U) in partial melts for pure equilibrium or disequilibrium porous flow transport in a 1D decompressing mantle melting column. The disequilibrium transport model considers reactivity rates relative to the solid decompression rate using a Damköhler number. The equations for these models are briefly summarized below, but the user is referred to the full Elkins and Spiegelman (2021) manuscript for more detailed definitions and derivations."
    ]
@@ -204,7 +204,7 @@
    "outputs": [],
    "source": [
     "# Indicate how you wish to impose lithospheric partition coefficients by indicating \"new\" or \"old\":\n",
-    "define_lith_Ds = 'new'"
+    "define_lith_Ds = 'old'"
    ]
   },
   {
@@ -234,6 +234,11 @@
     "    D_Ra_lith = Pfinal[5].tolist()\n",
     "    D_Pa_lith = Pfinal[6].tolist()\n",
     "\n",
+    "    D_U_crust = Pfinal[3].tolist()\n",
+    "    D_Th_crust = Pfinal[4].tolist()\n",
+    "    D_Ra_crust = Pfinal[5].tolist()\n",
+    "    D_Pa_crust = Pfinal[6].tolist()\n",
+    "    \n",
     "# Implement the changes:\n",
     "df_lith.loc[(df_lith['P'] < Plithos),['DU']] = D_U_lith\n",
     "df_lith.loc[(df_lith['P'] < Plithos),['DTh']] = D_Th_lith\n",
@@ -572,8 +577,7 @@
     "    act_eq_235 = us_eq.solve_grid(phi0,n,W0,us_eq.D_235,us_eq.lambdas_235,us_eq.alphas_235)\n",
     "    Pa_eq = act_eq_235[0]\n",
     "    df_eq = pd.DataFrame(Pa_eq)\n",
-    "    df_eq.to_csv(\"{}/{}_batch_Pa_eq.csv\".format(runname,runname))\n",
-    "    "
+    "    df_eq.to_csv(\"{}/{}_batch_Pa_eq.csv\".format(runname,runname))"
    ]
   },
   {
